<resources>
    <string name="app_name">AnimeDB</string>
    <string name="subject">动画</string>
    <string name="favorite">收藏</string>
    <string name="person">制作人员</string>
    <string name="character">角色</string>
    <string name="tag">标签</string>
    <string name="subjectPicture">剧照</string>
    <string name="title">标题</string>
    <string name="titleCHS">简体中文名</string>
    <string name="type">类型</string>
    <string name="epNum">话数</string>
    <string name="unknown">未知</string>
    <string name="alias">别名</string>
    <string name="score">评分</string>
    <string name="rank">排名</string>
    <string name="releaseDate">上映日期</string>
    <string name="summary">简介</string>
    <string name="scores">评分分布</string>
    <string name="filter">筛选</string>
    <string name="sort">排序</string>
    <string name="search">搜索</string>
    <string name="keyword">关键词</string>
    <string name="comment">备注</string>
    <string name="photo">照片</string>
    <string name="name">名字</string>
    <string name="brief">概述</string>
    <string name="job">职业</string>
    <string name="sex">性别</string>
    <string name="duty">职位</string>
    <string name="birthday">生日</string>
    <string name="works">作品</string>
    <string name="more">更多</string>
    <string name="dubber">声优</string>
    <string name="status">地位</string>
    <string name="star">出演</string>
    <string name="voteNum">票数</string>
</resources>
