<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_character_of_person"
    app:cardCornerRadius="5dp"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:minHeight="130dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:id="@+id/item_character_picture"
            android:contentDescription="@string/photo"
            android:src="@drawable/no_image_available"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            />
        <android.support.percent.PercentFrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView

                android:layout_gravity="top"
                app:layout_heightPercent="50%"
                android:layout_width="match_parent"
                android:text="@string/name"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:gravity="center_vertical"
                android:id="@+id/item_character_name"
                android:maxLines="1"/>

            <LinearLayout

                android:layout_gravity="bottom"
                app:layout_heightPercent="50%"
                android:layout_width="match_parent"
                android:id="@+id/layout_subject"
                android:orientation="horizontal"
                android:clickable="true"
                android:background="?attr/selectableItemBackground">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:maxHeight="50dp"
                    android:id="@+id/item_subject_picture"
                    android:contentDescription="@string/subjectPicture"
                    android:src="@drawable/no_image_available"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="5dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/title"
                        android:gravity="center_vertical"
                        android:id="@+id/item_subject_title"
                        android:maxLines="1"/>
                    <android.support.v7.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="2dp"
                        android:layout_gravity="center_vertical"
                        app:cardBackgroundColor="@color/colorAccent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/job"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            android:textColor="@android:color/white"
                            android:id="@+id/item_character_job"/>
                    </android.support.v7.widget.CardView>
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:src="@drawable/ic_more_horiz"
                    android:contentDescription="@string/more"
                    android:id="@+id/item_subject_more"
                    android:background="?attr/selectableItemBackground"/>



            </LinearLayout>



        </android.support.percent.PercentFrameLayout>


    </LinearLayout>



</android.support.v7.widget.CardView>