<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_character"
    app:cardCornerRadius="5dp"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:minHeight="100dp">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:id="@+id/item_character_picture"
            android:contentDescription="@string/photo"
            android:src="@drawable/no_image_available"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:text="@string/name"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:gravity="center_vertical"
                android:id="@+id/item_character_name"
                android:maxLines="1"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3">
                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="2dp"
                    android:layout_gravity="center_vertical"
                    app:cardBackgroundColor="@color/colorAccent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/job"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:padding="2dp"
                        android:textColor="@android:color/white"
                        android:id="@+id/item_character_job"/>
                </android.support.v7.widget.CardView>
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/brief"
                android:id="@+id/item_character_brief"
                android:maxLines="1"
                android:padding="2dp"
                android:ellipsize="end"
                />

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>