<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_subject"
    app:cardCornerRadius="5dp"
    android:layout_margin="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/item_subject_picture"
            android:contentDescription="@string/subjectPicture"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            />
        <TextView
            android:id="@+id/item_subject_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/title"
            android:textSize="18sp"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/colorAccent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duty"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_vertical"
                    android:padding="2dp"
                    android:textColor="@android:color/white"
                    android:id="@+id/item_subject_duty"/>
            </android.support.v7.widget.CardView>
        </FrameLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>