<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_character_of_subject"
    app:cardCornerRadius="5dp"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:minHeight="130dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:id="@+id/item_character_picture"
            android:contentDescription="@string/photo"
            android:src="@drawable/no_image_available"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            />
        <android.support.percent.PercentFrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <LinearLayout
                android:layout_gravity="top"
                app:layout_heightPercent="50%"
                android:layout_width="match_parent"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:gravity="center_vertical"
                    android:id="@+id/item_character_name"
                    android:maxLines="1"/>
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal">
                    <android.support.v7.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="2dp"
                        android:layout_gravity="center_vertical"
                        app:cardBackgroundColor="@color/colorAccent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/job"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:padding="2dp"
                            android:textColor="@android:color/white"
                            android:id="@+id/item_character_job"/>
                    </android.support.v7.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/brief"
                        android:id="@+id/item_character_brief"
                        android:maxLines="1"
                        android:padding="2dp"
                        android:ellipsize="end"
                        />

                </LinearLayout>
            </LinearLayout>


            <LinearLayout

                android:layout_gravity="bottom"
                app:layout_heightPercent="50%"
                android:layout_width="match_parent"
                android:id="@+id/layout_person"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:maxHeight="50dp"
                    android:id="@+id/item_person_picture"
                    android:contentDescription="@string/photo"
                    android:src="@drawable/no_image_available"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/name"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:gravity="center_vertical"
                    android:id="@+id/item_person_name"
                    android:maxLines="1"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:src="@drawable/ic_more_horiz"
                    android:contentDescription="@string/more"
                    android:id="@+id/item_person_more"
                    android:background="?attr/selectableItemBackground"/>



            </LinearLayout>



        </android.support.percent.PercentFrameLayout>



    </LinearLayout>

</android.support.v7.widget.CardView>