<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_favorite"
    app:cardCornerRadius="5dp"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/base_favorite">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/item_favorite_picture"
            android:contentDescription="@string/subjectPicture"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/no_image_available"/>
        <android.support.percent.PercentFrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                app:layout_heightPercent="50%"
                android:orientation="horizontal"
                android:layout_gravity="top">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title"
                    android:id="@+id/item_favorite_title"
                    android:layout_gravity="center_vertical"
                    android:maxLines="1"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:entries="@array/favorite_mark"
                    android:layout_gravity="center_vertical"
                    android:gravity="end"
                    android:id="@+id/item_favorite_mark">

                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                app:layout_heightPercent="50%"
                android:orientation="horizontal"
                android:layout_gravity="bottom"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/item_favorite_comment"
                    android:text="@string/comment"
                    android:layout_gravity="center_vertical"
                    android:maxLines="1"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:src="@drawable/ic_edit"
                    android:contentDescription="@string/comment"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground"
                    android:id="@+id/item_favorite_edit_comment"
                    />
            </LinearLayout>

        </android.support.percent.PercentFrameLayout>
    </LinearLayout>



</android.support.v7.widget.CardView>