<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.animedb.ui.SubjectActivity"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true"
        android:id="@+id/appBar_subject">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            android:id="@+id/collapsing_subject">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/image_subject"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:fitsSystemWindows="true"
                android:contentDescription="@string/subjectPicture"/>


            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/toolbar_subject"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"/>


        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/layout_subject_titleCHS"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titleCHS"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/subject_titleCHS"
                    android:text = "@string/titleCHS"
                    android:padding="20dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@android:color/darker_gray"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/layout_subject_type"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/subject_type"
                    android:text = "@string/type"
                    android:padding="20dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@android:color/darker_gray"/>

            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/epNum"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/subject_epNum"
                    android:text = "@string/epNum"
                    android:padding="20dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@android:color/darker_gray"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/layout_subject_alias"
                android:orientation="vertical"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alias"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/subject_alias"
                    android:text = "@string/alias"
                    android:padding="20dp"
                    android:maxLines="1"
                    android:ellipsize="end"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@android:color/darker_gray"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/layout_subject_score"
                android:orientation="vertical"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/score"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/subject_score"
                    android:text = "@string/score"
                    android:padding="20dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@android:color/darker_gray"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/layout_subject_rank"
                android:orientation="vertical"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rank"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/subject_rank"
                    android:text = "@string/rank"
                    android:padding="20dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@android:color/darker_gray"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/layout_subject_releaseDate"
                android:orientation="vertical"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/releaseDate"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/subject_releaseDate"
                    android:text = "@string/releaseDate"
                    android:padding="20dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@android:color/darker_gray"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/layout_subject_summary"
                android:orientation="vertical"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/summary"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/subject_summary"
                    android:text = "@string/summary"
                    android:padding="20dp"
                    android:maxLines="1"
                    android:ellipsize="end"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@android:color/darker_gray"/>
            </LinearLayout>




        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_favorite_border_dark"
        app:layout_anchor="@id/appBar_subject"
        app:layout_anchorGravity="bottom|end"
        android:id="@+id/fab_subject"/>

</android.support.design.widget.CoordinatorLayout>
